Icons are set now
//TODO
1) Add searcher in Author and Topic
2) Dialog Fragment to open a single dialog
3) Add Push notifications

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="quote_count">Quote Count</string>
     <string name="number_count">Number Count</string>
     <string name="author">Author</string>
+    <string name="backup">Backup</string>
 </resources>
 
