--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="number_count">Number Count</string>
     <string name="author">Author</string>
     <string name="backup">Backup</string>
+    <string name="topic">Topic</string>
 </resources>
 
