Animation and Option menus done.
Checking more on arraylist conflict issue.

Almost ready for deployment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="start_pushing">Start Pushing</string>
     <string name="hour">hour</string>
     <string name="share_using">Share using</string>
+    <string name="push_started">Push started</string>
 </resources>
 
